--- a/html/index.html
+++ b/html/index.html
@@ -7,34 +7,34 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="format-detection" content="telephone=no">
 	<title>모바일 마크업 가이드 | 우체국금융 채널</title>
-	<link rel="shortcut icon" href="/resources/img/favicon.ico">
+	<link rel="shortcut icon" href="/epost/resources/img/favicon.ico">
 
-	<link rel="stylesheet" href="/resources/css/common.css" class="common-css">
-	<link rel="stylesheet" href="/resources/_guide/css/style.css">
+	<link rel="stylesheet" href="/epost/resources/css/common.css" class="common-css">
+	<link rel="stylesheet" href="/epost/resources/_guide/css/style.css">
 
 	<!-- JavaScript -->
-	<script src="/resources/js/jquery-3.3.1.js"></script>
+	<script src="/epost/resources/js/jquery-3.3.1.js"></script>
 	<!--[if !IE]><!-->
-	<script src="/resources/_guide/js/jquery-1.12.4.min.js"></script>
+	<script src="/epost/resources/_guide/js/jquery-1.12.4.min.js"></script>
 	<!--<![endif]-->
-	<script src="/resources/js/jquery-ui.js"></script>
+	<script src="/epost/resources/js/jquery-ui.js"></script>
 
 	<!-- Plugins -->
-	<script src="/resources/js/slick.js"></script>
+	<script src="/epost/resources/js/slick.js"></script>
 
 	<!-- I.N.UIX Components -->
-	<script src="/resources/js/ui_global.js"></script>
-	<script src="/resources/js/ui_layout_setting.js"></script>
+	<script src="/epost/resources/js/ui_global.js"></script>
+	<script src="/epost/resources/js/ui_layout_setting.js"></script>
 
 	<!-- TODO : SyntaxHighlighter - 개발시 반드시 삭제 -->
-	<link rel="stylesheet" href="/resources/_guide/plugins/shCoreDefault.css">
-	<script src="/resources/_guide/plugins/shCore.js"></script>
-	<script src="/resources/_guide/plugins/shBrushXml.js"></script>
-	<script src="/resources/_guide/plugins/shBrushCss.js"></script>
-	<script src="/resources/_guide/plugins/shBrushJScript.js"></script>
+	<link rel="stylesheet" href="/epost/resources/_guide/plugins/shCoreDefault.css">
+	<script src="/epost/resources/_guide/plugins/shCore.js"></script>
+	<script src="/epost/resources/_guide/plugins/shBrushXml.js"></script>
+	<script src="/epost/resources/_guide/plugins/shBrushCss.js"></script>
+	<script src="/epost/resources/_guide/plugins/shBrushJScript.js"></script>
 
 	<!-- 사이트 개별 스크립트 -->
-	<script src="/resources/_guide/js/ui_html_guide.js"></script>
+	<script src="/epost/resources/_guide/js/ui_html_guide.js"></script>
 </head>
 
 <body>
